--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,13 @@ a{
 .home .header .nav ul li .active{
     color: tomato;
 }
+.home .header .all-options{
+    color: white;
+    font-size: 20px;
+    padding: 15px;
+    display: none;
+    float: right;
+}
 .home .landing{
     position: absolute;
     left: 50%;
@@ -294,6 +301,7 @@ a{
     border-radius: 10px;
     margin-right: 10px;
     margin-top: 5px;
+    cursor: pointer;
 }
 .about .about_content .about_info button:hover{
     background-color: rgb(240, 48, 48);
@@ -484,17 +492,14 @@ a{
 }
 .Feedback .Feedback_content .card .feed_img{
     float: left;
-    width: 20%;
-    border-top: 70px solid red;
-    border-left: 70px solid red;
-    border-right: 70px solid transparent;
-    border-bottom: 70px solid transparent;
+    width: 200px;
     height: 200px;
     text-align: center;
     position: relative;
+    background-image: linear-gradient(135deg, red 50%,transparent 50% );
 }
 .Feedback .Feedback_content .card .feed_img img{
-    width: 200%;
+    width: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -612,13 +617,16 @@ a{
     margin-left: 44%;
 }
 .contact .contact_content form{
-    margin: 40px 150px;
+    margin: 40px auto;
+    width: 80%;
 }
 .contact .contact_content form .text{
     width: 48.5%;
+    width: calc(100%/2 -2px);
     height: 40px;
     padding-left: 10px;
     margin-bottom: 20px;
+    margin-inline: 0;
 }
 .contact .contact_content form .textt{
     margin-right: 20px;
@@ -663,12 +671,11 @@ a{
     background-color: rgb(49, 48, 48);
 }
 .footer .footer_content{
-    padding: 70px 400px;
+    text-align: center;
+    padding-block: 60px;
     color: white;
 }
 .footer .footer_content .icons{
-    display: inline-block;
-    margin-left: 35%;
     padding-bottom: 15px;
 }
 .footer .footer_content .icons i{
@@ -683,15 +690,114 @@ a{
 }
 /*end footer*/
 /*start media*/
-@media all and (max-width:575px) {
+@media (min-width:575px) and (max-width:991px){
     .container{
         width: 100%;
     }
     .home .header .logo{
         padding: 15px;
     }
-    .home .header .nav{
-        visibility: hidden;
+    .home .header .navbar{
+        display: none;
+    }
+    .home .header .all-options{
+        display: block;
+    }
+    .about .about_content{
+        padding-block: 40px;
+    }
+    .about .about_content .border_img{
+        float: none;
+        width: 100%;
+    }
+    .about .about_content .about_info{
+        float: none;
+        width: 100%;
+        padding-left: 0;
+        margin-top: 25px;
+    }
+    .services{
+        padding: 30px 0;
+    }
+    .services .services_content .card{
+        float: none;
+        width: 80%;
+        margin: auto;
+    }
+    .portfolio .portfolio_content{
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+    .portfolio .portfolio_content .cards .card{
+        float: none;
+        width: 100%;
+    }
+    .dashboard{
+        padding: 30px 0;
+    }
+    .dashboard .cards .card{
+        width: 50%;
+        padding-bottom: 30px;
+    }
+    .Feedback .Feedback_content{
+        padding: 30px 0;
+    }
+    .Feedback .Feedback_content .card .feed_cont{
+        width: calc(100% - 200px);
+    }
+    .blog .blog_content{
+        padding: 30px 0;
+    }
+    .blog .blog_content .cards .card{
+        float: none;
+        width: 80%;
+        margin: 30px auto;
+    }
+    .contact .contact_content{
+        padding: 30px 0;
+    }
+}
+@media (min-width: 768px) and (max-width:991px){
+    .container{
+        width: 90%;
+    }
+    .about .about_content .border_img{
+        width: 80%;
+        margin: auto;
+    }
+    .about .about_content .about_info{
+        width: 80%;
+        margin: auto;
+        padding-top: 30px;
+    }
+    .services .services_content .card{
+        float: left;
+        width: 50%;
+    }
+    .portfolio .portfolio_content .cards .card{
+        float: left;
+        width: 50%;
+    }
+}
+@media (min-width: 992px) and (max-width:1199px){
+    .container{
+        width: 95%;
+    }
+    .about .about_content{
+        padding-block: 40px;
+    }
+    .services{
+        padding: 30px 0;
+    }
+    .portfolio .portfolio_content{
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+    .dashboard{
+        padding: 30px 0;
+    }
+    .contact .contact_content{
+        padding: 30px 0;
     }
 }
 /*end media*/
